# extended_int

./: README.md  README.rst  pyproject.toml  setup.cfg  setup.py
extended_int/: __init__.py  extended_int.py  extended_integral.py
